boiler plates and cdns

--- a/index.html
+++ b/index.html
@@ -70,6 +70,25 @@
         </div>    
     </section>
 
+<!--Booking Section-->
+<section class="booking container p-5">
+    <h1 class="fs-1">WHERE ARE YOU LOCATED?</h1>
+    <form>
+          <div class="form-group col-md-12 form-control-lg">
+            <select id="inputCity" class="form-control form-control-lg">
+              <option>Nairobi</option>
+              <option>Mombasa</option>
+              <option>Kisusmu</option>
+              <option>Kiambu</option>
+              <option>Kericho</option>
+            </select>
+          </div>
+        <!--<button type="submit" class="btn btn-dark"></button>-->   
+      </form>
+
+
+
+</section>
 
 
 
