adds a json file for available locations

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <option>Kericho</option>
                 </select>
             </div>
-            <!--<button type="submit" class="btn btn-dark"></button>-->
+            <button type="submit" class="btn btn-dark locationsBtn"></button>
         </form>
     </section>
 
