style:add column

--- a/index.html
+++ b/index.html
@@ -34,11 +34,29 @@
 
 <body>
 
+ <!-- About us Section -->
+ <section class="about">
+    <div class="container-fluid">
+        <div class="banner">
+            <div class="aside">
+                <div class="row">
+                    <div class="title col-md-6 d-flex flex-column justify-content-center align-items-center text-center">
+                        <div class="rectangle  d-flex flex-column justify-content-center mt-5">
+                        <h2>ABOUT US</h2>
 
-
-
-
-
+                        </div>
+                    </div>
+                    <div class="col-md-6"></div>
+                </div>
+            </div>
+        </div>
+        <div class="team">
+            <div class="row">
+                <div class="col-md-6"></div>
+                <div class="col-md-6"></div>
+            </div>
+        </div>
+    </div>
 
 </section>
 
