--- a/index.html
+++ b/index.html
@@ -52,8 +52,23 @@
         </div>
         <div class="team">
             <div class="row">
+                <div class="col-md-6">
+
+                </div>
                 <div class="col-md-6"></div>
-                <div class="col-md-6"></div>
+            </div>
+            <div class="row">
+            <div class="col-lg-12">
+                <h2>MEET THE TEAM</h2>
+            </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+
+                </div>
+                <div class="col-md-6">
+                    
+                </div>
             </div>
         </div>
     </div>
