--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
         </div>
         <div class="team">
             <div class="row">
-                <div class="col-md-6">
-
+                <div class="pro col-md-6">
+                    <img src="./assets/profile.png" alt="person1">
                 </div>
-                <div class="col-md-6"></div>
+                <div class="pro col-md-6">
+                    <img src="./assets/profile.png" alt="person1">
+                </div>
             </div>
             <div class="row">
             <div class="col-lg-12">
@@ -63,11 +65,11 @@
             </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-
+                <div class="pro col-md-6">
+                    <img src="./assets/profile.png" alt="person1">
                 </div>
-                <div class="col-md-6">
-                    
+                <div class="pro col-md-6">
+                    <img src="./assets/profile.png" alt="person1">
                 </div>
             </div>
         </div>
