--- a/index.html
+++ b/index.html
@@ -51,24 +51,30 @@
             </div>
         </div>
         <div class="team">
-            <div class="row">
-                <div class="pro col-md-6">
+            <div class="row d-flex flex-row justify-content-space end">
+                <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
                 </div>
-                <div class="pro col-md-6">
+                <div class="col-md-4">
+
+                </div>
+                <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
                 </div>
             </div>
             <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 text-center">
                 <h2>MEET THE TEAM</h2>
             </div>
             </div>
             <div class="row">
-                <div class="pro col-md-6">
+                <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
                 </div>
-                <div class="pro col-md-6">
+                <div class="col-md-4">
+                    
+                </div>
+                <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
                 </div>
             </div>
