--- a/index.html
+++ b/index.html
@@ -45,13 +45,20 @@
                         <h2>ABOUT US</h2>
 
                         </div>
+                        <div class="about-text">
+                            <h2>WHO WE ARE</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Iure, modi sint? In aspernatur distinctio, 
+                            asperiores obcaecati impedit voluptatibus dolorum 
+                        doloribus ad ab vel, ex beatae dignissimos soluta architec?</p>
+                        </div>
                     </div>
                     <div class="col-md-6"></div>
                 </div>
             </div>
         </div>
         <div class="team">
-            <div class="row d-flex flex-row justify-content-space end">
+            <div class="row d-flex flex-row align-items-end">
                 <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
                 </div>
@@ -62,17 +69,20 @@
                     <img src="./assets/profile.png" alt="person1">
                 </div>
             </div>
-            <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>MEET THE TEAM</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <h2>MEET THE TEAM</h2>
+                    </div>
+                    </div>
             </div>
-            </div>
+            
             <div class="row">
                 <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
                 </div>
                 <div class="col-md-4">
-                    
+
                 </div>
                 <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
