add the home page section to the html body, style the home page background

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,6 +32,10 @@
 </head>
 
 <body>
+    <!--HOME PAGE SECTION-->
+    <section class="home container-fluid mx-0 h-100 text-center">
+
+    </section>
 
 
 
