add main header and title in row and  column

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 <body>
     <!--HOME PAGE SECTION-->
     <section class="home container-fluid mx-0 h-100 text-center">
+        <header class="main">
+            <div class="row h-100">
+                <div class="col-sm-12 my-auto">
+                    <h1 class="title mt-5">Hustle Mania</h1>
+
+                </div>
+
+            </div>
+
+        </header>
+
 
     </section>
 
