add title1(sub title), align and style it

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 
 <body>
     <!--HOME PAGE SECTION-->
-    <section class="home container-fluid mx-0 h-100 text-center">
+    <section class="home container-fluid text-center">
         <header class="main">
-            <div class="row h-100">
-                <div class="col-sm-12 my-auto">
+            <div class="row">
+                <div class="col-sm-12 my-auto m-5">
                     <h1 class="title mt-5">Hustle Mania</h1>
-
+                    <div>
+                       <p class="title1 mt-2">CO - WORKING SPACE <br>LAPTOPS TO HIRE AT OUR SPACE</p>
+                    </div> 
                 </div>
 
             </div>
@@ -47,22 +49,6 @@
 
 
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
 </body>
 
 </html>
