add the homepage description, align  and style

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <h1 class="title mt-5">Hustle Mania</h1>
                     <div>
                        <p class="title1 mt-2">CO - WORKING SPACE <br>LAPTOPS TO HIRE AT OUR SPACE</p>
+                       <p class="description ">Getting your work done shouldn't be hustle. Lack of a PC shouldn't make <br> 
+                        you miss out on big opportunities. We offer you a place to get your work <br> 
+                        done  comfortably using the laptop you prefer </p>
                     </div> 
                 </div>
 
