--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                        <p class="description ">Getting your work done shouldn't be hustle. Lack of a PC shouldn't make <br> 
                         you miss out on big opportunities. We offer you a place to get your work <br> 
                         done  comfortably using the laptop you prefer </p>
+                        <p class="scroll">| <br> scroll</p>
                     </div> 
+    
                 </div>
 
             </div>
