--- a/index.html
+++ b/index.html
@@ -172,6 +172,66 @@
         </div>
     </section>
 
+    <!--Footer Section-->
+    <section class="footer">
+        <footer id="footer">
+            <div class="footer-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 footer-links">
+                            <h4>Useful Links</h4>
+                            <ul>
+                                <li><i class="fa fa-chevron-right"></i><a href="#">Home</a></li>
+                                <li><i class="fa fa-chevron-right"></i><a href="#">About Us</a></li>
+                                <li><i class="fa fa-chevron-right"></i><a href="#">Book </a></li>
+                                <li><i class="fa fa-chevron-right"></i><a href="#">Register</a></li>
+                                <li><i class="fa fa-chevron-right"></i><a href="#">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 col-md-6 footer-links">
+                            <h4>Laptops Available</h4>
+                            <ul>
+                                <li><i class="fa fa-chevron-right"></i> <a href="#">Dell</a></li>
+                                <li><i class="fa fa-chevron-right"></i> <a href="#">Apple</a></li>
+                                <li><i class="fa fa-chevron-right"></i> <a href="#">Asus</a></li>
+                                <li><i class="fa fa-chevron-right"></i> <a href="#">Hp</a></li>
+                                <li><i class="fa fa-chevron-right"></i> <a href="#">Lenovo</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 col-md-6 footer-contact" id="contact">
+                            <h4>Contact Us</h4>
+                            <p>Biashara St<br>Nairobi<br>Kenya<br><br>
+                                <strong>Phone:</strong> +254 796 693 270<br>
+                                <strong>Email:</strong> info@hustlemania.com<br>
+                            </p>
+                        </div>
+                        <div class="col-lg-3 col-md-6 footer-info">
+                            <h3>About Hutle Mania</h3>
+                            <p>
+                                We provide you with the opportunity to not just get the best laptops 
+                                for your work, but also get the best place to sit and work. 
+                                Our goal is to make sure you get your work done efficiently.
+                            </p>
+                            <div class="social-links mt-3">
+                                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                                <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="copyright">
+                    &copy; Copyright <strong><span>Hustle Mania</span>
+                    </strong>. All Rights Reserved
+                </div>
+                <div class="credits">Designed by
+                    <a href="#">Happy Coders</a>
+                </div>
+            </div>
+        </footer>
 
 
 
