--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
                         </div>
                         <div class="about-text">
-                            <h2>WHO WE ARE</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+                            <h2>WHO<br>WE<br>ARE</h2>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing<br>
                             elit. Iure, modi sint? In aspernatur distinctio, 
                             asperiores obcaecati impedit voluptatibus dolorum 
                         doloribus ad ab vel, ex beatae dignissimos soluta architec?</p>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="team">
-            <div class="row d-flex flex-row align-items-end">
+            <div class="row d-flex flex-row justify-content-between text-center">
                 <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
                 </div>
@@ -69,15 +69,15 @@
                     <img src="./assets/profile.png" alt="person1">
                 </div>
             </div>
-            <div class="container">
+            <!-- <div class="container"> -->
                 <div class="row">
                     <div class="col text-center">
-                        <h2>MEET THE TEAM</h2>
+                        <h2>THE TEAM</h2>
                     </div>
                     </div>
-            </div>
+            <!-- </div> -->
             
-            <div class="row">
+            <div class="row d-flex flex-row justify-content-between text-center">
                 <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
                 </div>
