--- a/index.html
+++ b/index.html
@@ -105,25 +105,37 @@
                 </select>
             </div>
             <!--Add a button with laptops based on input sensed-->
-        </form>
-        <!--Date and time selection-->
-        <form class="laptop-form m-5 ">
-            <h1 class="fs-1">WHAT DATE AND TIME WOULD YOU LIKE THE SLOT?</h1>
-            <div class="form-group form-control-lg">
-                <select id="inputLaptop" class="form-control form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                    <option>Dell</option>
-                    <option>Apple</option>
-                    <option>Hp</option>
-                    <option>Lenovo</option>
-                    <option>Asus</option>
-                </select>
-            </div>
-            <!--Add a button with laptops based on input sensed-->
-        </form>
+        </form> 
+    </section>
 
-        <!--Date and time Picker-->
+    <!--Date and time picker-->
+    <section class="container p-5">
+        <h1 class="fs-1">SELECT BOOKING DATE AND TIME</h1>
 
-        
+        <div class="wrapper bg-white">
+            <form action="#">
+                <div class="form-group d-sm-flex margin">
+
+                    <div class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative"> 
+                        <input type="text" required placeholder="From" class="form-control">
+                        <div class="label" id="from"></div>
+                    </div>
+                    <div class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative"> 
+                        <input type="text" required placeholder="To" class="form-control">
+                        <div class="label" id="to"></div>
+                    </div>
+                </div>
+                <div class="form-group d-sm-flex margin">
+                    <div class="d-flex align-items-center flex-fill me-sm1 my-sm-0 border-bottom position-relative">
+                         <input type="date" required placeholder="Depart Date" class="form-control">
+                        <div class="label" id="depart"></div>
+                    </div>
+                </div>
+                <div class="form-group my-3">
+                    <div class="btn btn-primary rounded-0 d-flex justify-content-center text-center p-3 date-submit">Submit </div>
+                </div>
+            </form>
+        </div>
         
     </section>
 
