--- a/index.html
+++ b/index.html
@@ -110,23 +110,23 @@
 
     <!--Date and time picker-->
     <section class="container p-5">
-        <h1 class="fs-1">SELECT BOOKING DATE AND TIME</h1>
+        <h1 class="fs-1 text-center">SELECT BOOKING DATE AND TIME</h1>
         <div class="wrapper bg-white">
             <form action="#">
                 <div class="form-group d-sm-flex margin">
-                    <div class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative"> 
-                        <input type="text" required placeholder="From" class="form-control">
-                        <div class="label" id="from"></div>
+                    <div class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative">
+                        <label for="time">From</label>
+                        <input type="time" required  class="form-control">
+                        
                     </div>
-                    <div class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative"> 
-                        <input type="text" required placeholder="To" class="form-control">
-                        <div class="label" id="to"></div>
+                    <div class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative">
+                        <label for="date">To</label>
+                        <input type="time" required  class="form-control">
                     </div>
                 </div>
-                <div class="form-group d-sm-flex margin">
+                <div class="form-group d-sm-flex margin">                        
                     <div class="d-flex align-items-center flex-fill me-sm1 my-sm-0 border-bottom position-relative">
-                         <input type="date" required placeholder="Depart Date" class="form-control">
-                        <div class="label" id="depart"></div>
+                        <input type="date" required placeholder="Date" class="form-control">
                     </div>
                 </div>
                 <div class="form-group my-3">
