adds specific locations upon select of locations, adds specific laptops buttons aupon select of brands

--- a/index.html
+++ b/index.html
@@ -81,13 +81,17 @@
             <div class="form-group form-control-lg">
                 <select id="inputCity" class="form-control form-select form-select-lg mb-3"
                     aria-label=".form-select-lg example">
-                    <option>Nairobi</option>
-                    <option>Mombasa</option>
-                    <option>Kisusmu</option>
-                    <option>Kiambu</option>
-                    <option>Kericho</option>
+                    <option class="location">Select</option>
+                    <option class="location">Nairobi</option>
+                    <option class="location">Mombasa</option>
+                    <option class="location">Kisumu</option>
+                    <option class="location">Kiambu</option>
+                    <option class="location">Kericho</option>
                 </select>
+                <div class="buttonsLocate"></div>
             </div>
+            
+            
             <!--Add a button with locations based on input sensed-->
         </form>
 
@@ -97,12 +101,14 @@
             <div class="form-group form-control-lg">
                 <select id="inputLaptop" class="form-control form-select form-select-lg mb-3"
                     aria-label=".form-select-lg example">
-                    <option>Dell</option>
-                    <option>Apple</option>
-                    <option>Hp</option>
-                    <option>Lenovo</option>
-                    <option>Asus</option>
+                    <option class="laptop">Select</option>
+                    <option class="laptop">Dell</option>
+                    <option class="laptop">Apple</option>
+                    <option class="laptop">Hp</option>
+                    <option class="laptop">Lenovo</option>
+                    <option class="laptop">Asus</option>
                 </select>
+                <div class="buttonsLaptop"></div>
             </div>
             <!--Add a button with laptops based on input sensed-->
         </form> 
