feature:add button

--- a/index.html
+++ b/index.html
@@ -45,19 +45,22 @@
                         <h2>ABOUT US</h2>
 
                         </div>
-                        <div class="about-text">
+                        <div class="about-text text-left">
                             <h2>WHO<br>WE<br>ARE</h2>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing<br>
-                            elit. Iure, modi sint? In aspernatur distinctio, 
-                            asperiores obcaecati impedit voluptatibus dolorum 
-                        doloribus ad ab vel, ex beatae dignissimos soluta architec?</p>
+                            <p> We are a startup tech that Lorem ipsum dolor, sit amet consectetur adipisicing<br>
+                             In aspernatur distinctio, 
+                            asperiores obca<br>ecati impedit voluptatibus dolorum 
+                        doloribus ad ab vel, ex beatae dignis<br>simos soluta architec?</p>
                         </div>
                     </div>
-                    <div class="col-md-6"></div>
+                    <div class="button col-md-6 d-flex justify-content-end text-white">
+                        <h3>Hustle Mania</h3>
+                        <button type="submit">Book Space Now</button>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="team">
+        <div class="team mt-5">
             <div class="row d-flex flex-row justify-content-between text-center">
                 <div class="pro col-md-4">
                     <img src="./assets/profile.png" alt="person1">
