--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
                         class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative">
                         <label for="time">From</label>
                         <input type="time" required class="form-control">
-
                     </div>
                     <div
                         class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative">
@@ -143,6 +142,7 @@
         </div>
 
     </section>
+ <!--Display Booking Order-->
 
     <!--Lapton Renter Registration-->
     <section class="register-container container mt-5 mb-5">
