add, position and style the book space pill type button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
                         you miss out on big opportunities. We offer you a place to get your work <br> 
                         done  comfortably using the laptop you prefer </p>
                         <p class="scroll">| <br> scroll</p>
+                        
                     </div> 
+                    <div class="button col-md-6 d-flex justify-content-end text-white p-5">
+                        <button type="submit">Book Space Now</button>
+                    </div>
     
                 </div>
 
