add the particles.js file for home background effect

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     <!--Javascript Files-->
     <script src="./js/bl-hustle.js" defer></script>
     <script src="./js/ui-hustle.js" defer></script>
+    <script src="./js/particles.js"></script>
 </head>
 
 <body>
     <!--HOME PAGE SECTION-->
+    <div id="particles-js"></div>
     <section class="home container-fluid text-center">
         <header class="main">
             <div class="row">
