--- a/index.html
+++ b/index.html
@@ -106,43 +106,76 @@
                     <option class="laptop">Lenovo</option>
                     <option class="laptop">Asus</option>
                 </select>
-                    <!--Add a button with laptops based on input sensed-->
+                <!--Add a button with laptops based on input sensed-->
                 <div class="buttonsLaptop"></div>
             </div>
         </form>
-    </section>  
+    </section>
 
     <!--Date and time picker-->
     <section class="date-container container p-5">
-        <h1 class="fs-1 text-center">SELECT BOOKING DATE AND TIME</h1>
-        <div class="wrapper bg-white">
-            <form action="#">
-                <div class="form-group d-sm-flex margin">
-                    <div
-                        class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative">
-                        <label for="time">From</label>
-                        <input type="time" required class="form-control">
+        <div class="outer-wrapper">
+            <h1 class="fs-1 text-center">SELECT BOOKING DATE AND TIME</h1>
+            <div class="wrapper bg-white">
+                <form action="#">
+                    <div class="form-group d-sm-flex margin">
+                        <div
+                            class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative">
+                            <label for="time">From</label>
+                            <input type="time" required class="form-control start">
+                        </div>
+                        <div
+                            class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative">
+                            <label for="date">To</label>
+                            <input type="time" required class="form-control end ">
+                        </div>
                     </div>
-                    <div
-                        class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative">
-                        <label for="date">To</label>
-                        <input type="time" required class="form-control">
+                    <div class="form-group d-sm-flex margin">
+                        <div class="d-flex align-items-center flex-fill me-sm1 my-sm-0 border-bottom position-relative">
+                            <input type="date" required placeholder="Date" class="form-control">
+                        </div>
                     </div>
-                </div>
-                <div class="form-group d-sm-flex margin">
-                    <div class="d-flex align-items-center flex-fill me-sm1 my-sm-0 border-bottom position-relative">
-                        <input type="date" required placeholder="Date" class="form-control">
+                    <div class="form-group my-3">
+                        <div
+                            class="btn btn-primary rounded-0 d-flex justify-content-center text-center p-3 date-submit">
+                            Submit </div>
                     </div>
-                </div>
-                <div class="form-group my-3">
-                    <div class="btn btn-primary rounded-0 d-flex justify-content-center text-center p-3 date-submit">
-                        Submit </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-
+        <div class="spinner-grow " style="width: 3rem; height: 3rem;" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
     </section>
- <!--Display Booking Order-->
+
+    <!--Display Booking Order-->
+    <section class="bookingDisplayEmpty">
+        <span class="visually-hidden">bookingDisplay...</span>
+    </section>
+
+    <button type="button" class="btn btn-primary bookingDisplayBtn" data-bs-toggle="modal" data-bs-target="#bookingDisplay">
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="bookingDisplay" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="bookingDisplayLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="bookingDisplayLabel">Modal title</h5>
+                    <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Content
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary close" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <!--Lapton Renter Registration-->
     <section class="register-container container mt-5 mb-5">
