style:content-alignment

--- a/index.html
+++ b/index.html
@@ -42,19 +42,17 @@
                 <div class="row">
                     <div class="title col-md-6 d-flex flex-column justify-content-center align-items-center text-center">
                         <div class="rectangle  d-flex flex-column justify-content-center mt-5">
-                        <h2>ABOUT US</h2>
+                        <h2>ABOUT<br>US</h2>
+                        <div class="about-text text-left">
+                            <p>Hustle Mania is a startup tech that comes into place when one needs a conducive working space that enables one toworkfromwithor without their laptop. It also avails laptops for those without and are in need of accessing one. It alsogives an opportunity for people to earn something fromrenting out their own laptops for use at the space.<br>
+                             </p>
+                        </div>
 
                         </div>
-                        <div class="about-text text-left">
-                            <h2>WHO<br>WE<br>ARE</h2>
-                            <p> We are a startup tech that Lorem ipsum dolor, sit amet consectetur adipisicing<br>
-                             In aspernatur distinctio, 
-                            asperiores obca<br>ecati impedit voluptatibus dolorum 
-                        doloribus ad ab vel, ex beatae dignis<br>simos soluta architec?</p>
-                        </div>
+                       
                     </div>
-                    <div class="button col-md-6 d-flex justify-content-end text-white">
-                        <h3>Hustle Mania</h3>
+                    <div class="button col-md-6 d-flex justify-content-end text-white p-5">
+                        <!-- <h3>Hustle Mania</h3> -->
                         <button type="submit">Book Space Now</button>
                     </div>
                 </div>
@@ -63,13 +61,13 @@
         <div class="team mt-5">
             <div class="row d-flex flex-row justify-content-between text-center">
                 <div class="pro col-md-4">
-                    <img src="./assets/profile.png" alt="person1">
+                    <img src="./assets/e.png" alt="person1">
                 </div>
                 <div class="col-md-4">
 
                 </div>
                 <div class="pro col-md-4">
-                    <img src="./assets/profile.png" alt="person1">
+                    <img src="./assets/mat.png" alt="person1">
                 </div>
             </div>
             <!-- <div class="container"> -->
@@ -82,13 +80,13 @@
             
             <div class="row d-flex flex-row justify-content-between text-center">
                 <div class="pro col-md-4">
-                    <img src="./assets/profile.png" alt="person1">
+                    <img src="./assets/mit.png" alt="person1">
                 </div>
                 <div class="col-md-4">
 
                 </div>
                 <div class="pro col-md-4">
-                    <img src="./assets/profile.png" alt="person1">
+                    <img src="./assets/v.png" alt="person1">
                 </div>
             </div>
         </div>
