--- a/index.html
+++ b/index.html
@@ -148,15 +148,14 @@
         </div>
     </section>
 
-    <!--Display Booking Order-->
+    <!--Display Booking Order Empty Container-->
     <section class="bookingDisplayEmpty">
         <span class="visually-hidden">bookingDisplay...</span>
     </section>
 
+    <!-- Modal -->
     <button type="button" class="btn btn-primary bookingDisplayBtn" data-bs-toggle="modal" data-bs-target="#bookingDisplay">
     </button>
-
-    <!-- Modal -->
     <div class="modal fade" id="bookingDisplay" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="bookingDisplayLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -174,8 +173,6 @@
             </div>
         </div>
     </div>
-
-
 
     <!--Lapton Renter Registration-->
     <section class="register-container container mt-5 mb-5">
