style:content-alignment

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <div class="title col-md-6 d-flex flex-column justify-content-center align-items-center text-center">
                         <div class="rectangle  d-flex flex-column justify-content-center mt-5">
                         <h2>ABOUT<br>US</h2>
-                        <div class="about-text text-left">
-                            <p>Hustle Mania is a startup tech that comes into place when one needs a conducive working space that enables one toworkfromwithor without their laptop. It also avails laptops for those without and are in need of accessing one. It alsogives an opportunity for people to earn something fromrenting out their own laptops for use at the space.<br>
+                        <div class="about-text text-left text-black">
+                            <p>Hustle Mania is a startup tech that comes into place when one needs a conducive working space that enables one to work from with or without their laptop. It also avails laptops for those without and are in need of accessing one. It also gives an opportunity for people to earn something from renting out their own laptops for use at the space.<br>
                              </p>
                         </div>
 
