adds the ui js file

--- a/index.html
+++ b/index.html
@@ -41,26 +41,29 @@
 
 <body>
     <!--HOME PAGE SECTION-->
-    <div id="particles-js"></div>
-    <section class="home container-fluid ">
-        <header class="main text-center">
-            <div class="row">
-                <div class="col-sm-12 my-auto m-4 text-center">
-                    <h1 class="title mt-5 pt-3">Hustle Mania</h1>
-                    <div>
-                       <p class=" col-sm-12 title1 mt-2 fs-2 p-2">CO-WORKING SPACE & <br>LAPTOPS TO HIRE AT OUR SPACE</p>
-                       <p class=" col-sm-12 description fs-3 p-2">Getting your work done shouldn't be hustle. Lack of a PC shouldn't make <br> 
-                        you miss out on big opportunities. We offer you a place to get your work <br> 
-                        done  comfortably using the laptop you prefer </p>
-                        <p class=" col-sm-12 scroll fs-1">| </p>
-                        <p> scroll</p>
-                        
-                    </div> 
+    <div id="particles-js">
+        <section class="home container-fluid ">
+            <header class="main text-center">
+                <div class="row">
+                    <div class="col-sm-12 my-auto m-4 text-center">
+                        <h1 class="title mt-5 pt-3">Hustle Mania</h1>
+                        <div>
+                           <p class=" col-sm-12 title1 mt-2 fs-2 p-2">CO-WORKING SPACE & <br>LAPTOPS TO HIRE AT OUR SPACE</p>
+                           <p class=" col-sm-12 description fs-3 p-2">Getting your work done shouldn't be hustle. Lack of a PC shouldn't make <br> 
+                            you miss out on big opportunities. We offer you a place to get your work <br> 
+                            done  comfortably using the laptop you prefer </p>
+                            <p class=" col-sm-12 scroll fs-1">| </p>
+                            <p> scroll</p>
+                            
+                        </div> 
+                    </div>
                 </div>
-            </div>
-        </header>
-        <button class ="home-button btn btn-dark rounded-pill m-5"type="submit">Book Space Now</button>
-    </section>
+            </header>
+            <button class ="home-button btn btn-dark rounded-pill m-5"type="submit">Book Space Now</button>
+        </section>
+
+    </div>
+
 
     <!--About US -->
     <section class="about container-fluid banner">
@@ -116,30 +119,7 @@
         </div>
     </section>
 
-    <!--Team-->
-    <section class="container-fluid team pt-5 p-5 h-100">
-        <div class="row text-center p-5">
-            <div class="pro col-md-6 ">
-                <img class="p-2 w-50 rounded-circle " src="./assets/e.jpeg" alt="person1">
-            </div>
-            <div class="pro col-md-6">
-                <img class="p-2 w-50 rounded-circle" src="./assets/mat.png" alt="person1">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col text-center">
-                <h2>THE TEAM</h2>
-            </div>
-        </div>
-        <div class="row text-center p-5">
-            <div class="pro col-md-6">
-                <img class="w-50 p-2 rounded-circle" src="./assets/mit.png" alt="person1">
-            </div>
-            <div class="pro col-md-6">
-                <img class="w-50 p-2 rounded-circle" src="./assets/v.jpg" alt="person1">
-            </div>
-        </div>
-    </section>
+   
 
     <!--Booking Section-->
     <section class="booking-container container p-5 m-5">
@@ -217,11 +197,6 @@
         </div>
     </section>
 
-    <!--Display Booking Order Empty Container-->
-    <section class="bookingDisplayEmpty">
-        <span class="visually-hidden">bookingDisplay...</span>
-    </section>
-
     <!-- Modal -->
     <button type="button" class="btn btn-primary bookingDisplayBtn" data-bs-toggle="modal" data-bs-target="#bookingDisplay">
     </button>
@@ -296,6 +271,31 @@
                         <a href="#" class="login-link">Login</a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+     <!--Team-->
+     <section class=" team container-fluid pt-5 p-5 h-100">
+        <div class="row text-center p-5">
+            <div class="pro col-md-6 ">
+                <img class="p-2 w-50 rounded-circle " src="./assets/e.jpeg" alt="person1">
+            </div>
+            <div class="pro col-md-6">
+                <img class="p-2 w-50 rounded-circle" src="./assets/mat.png" alt="person1">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <h2>THE TEAM</h2>
+            </div>
+        </div>
+        <div class="row text-center p-5">
+            <div class="pro col-md-6">
+                <img class="w-50 p-2 rounded-circle" src="./assets/mit.png" alt="person1">
+            </div>
+            <div class="pro col-md-6">
+                <img class="w-50 p-2 rounded-circle" src="./assets/v.jpg" alt="person1">
             </div>
         </div>
     </section>
