--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <section class="selection container p-5 ">
                 <div class="row gx-5">
                     <!--Redirects to laptop signup page-->
+                    <h3 class="booking-title">Hustle Mania</h3>
                     <div class="col-md-6 p-5">
                         <h1 class="p-2">Rent Out Laptop</h1>
                         <div class="register-text">
