link the scroll text and sign to the about page

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
                             <p class=" col-sm-12 description fs-3 p-2">Getting your work done shouldn't be hustle. Lack
                                 of a PC shouldn't make <br>
                                 you miss out on big opportunities. We offer you a place to get your work <br>
-                                done comfortably using the laptop you prefer </p>
-                            <p class=" col-sm-12 scroll fs-1"> | </p>
-                            <p class ="scroll-text"> scroll</p>
-
+                                done comfortably using the laptop you prefer 
+                            </p>
+                            <a href="#about"><p class=" col-sm-12 scroll fs-1"> | </p>
+                                <p class ="scroll-text"> scroll</p>
+                            </a>
                         </div>
                     </div>
                 </div>
