--- a/index.html
+++ b/index.html
@@ -164,16 +164,23 @@
             <div class="wrapper bg-white">
                 <form action="#">
                     <div class="form-group d-sm-flex margin">
-                        <div
-                            class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative">
-                            <label for="time">From</label>
-                            <input type="time" required class="form-control start">
+                        <div class="d-flex align-items-center flex-fill me-sm-1 my-sm-0 my-4 border-bottom position-relative">
+                            <select id="inputCity" class="form-control form-select form-select-lg mb-3"
+                                aria-label=".form-select-lg example">
+                                <option class="time">Select</option>
+                                <option class="time" value="1">1 hr</option>
+                                <option class="time" value="2">2 hrs</option>
+                                <option class="time" value="3">3 hrs</option>
+                                <option class="time" value="4">4 hrs</option>
+                                <option class="time" value="5">5 hrs</option>
+                                <option class="time" value="6">6 hrs</option>
+                                <option class="time" value="7">7 hrs</option>
+                                <option class="time" value="8">8 hrs </option>
+                                <option class="time" value="9">9 hrs</option>
+                                <option class="time" value="10">10 hrs +</option>
+                            </select>
                         </div>
-                        <div
-                            class="d-flex align-items-center flex-fill ms-sm-1 my-sm-0 my-4 border-bottom position-relative">
-                            <label for="date">To</label>
-                            <input type="time" required class="form-control end ">
-                        </div>
+                     
                     </div>
                     <div class="form-group d-sm-flex margin">
                         <div class="d-flex align-items-center flex-fill me-sm1 my-sm-0 border-bottom position-relative">
