style:add h3 tag

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section class="selection container p-5 ">
                 <div class="row gx-5">
                     <!--Redirects to laptop signup page-->
-                    <div class="col-md-6 p-5">
+                    <div class="one col-md-6 p-5">
                         <h1 class="p-2">Rent Out Laptop</h1>
                         <div class="register-text">
                             <p> Would you like to make some extra money renting out your laptop?</p>
@@ -279,9 +279,18 @@
             <div class="row text-center p-5">
                 <div class="pro col-md-6 ">
                     <img class="p-2 w-25 rounded-circle " src="./assets/e.jpeg" alt="person1">
+                    <div class="textt">
+                        <h3>Esther Kimani</h3>
+                        <p>Collaborator</p>
+                       </div>
                 </div>
+                
                 <div class="pro col-md-6">
                     <img class="p-2 w-25 rounded-circle" src="./assets/mat.png" alt="person1">
+                    <div class="textt">
+                        <h3>Maltilda Nyaboke</h3>
+                        <p>Collaborator</p>
+                       </div>
                 </div>
             </div>
             <div class="row">
@@ -298,9 +307,17 @@
                 
                 <div class="pro col-md-6">
                     <img class="w-25 p-2 rounded-circle" src="./assets/mit.png" alt="person1">
+                    <div class="textt">
+                        <h3>Michelle Njeri</h3>
+                        <p>Collaborator</p>
+                       </div>
                 </div>
                 <div class="pro col-md-6">
                     <img class="w-25 p-2 rounded-circle" src="./assets/v.jpg" alt="person1">
+                    <div class="textt">
+                        <h3>Vanessa Shiundu</h3>
+                        <p>Scrum master</p>
+                       </div>
                 </div>
             </div>
         </section>
