style:add readMe file

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <!--FontAwsome-->
     <script src="https://use.fontawesome.com/00f3447240.js"></script>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
 
 
 
