feature:link items

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </header>
-            <button class="home-button btn btn-dark rounded-pill m-5" type="submit">Book Space Now</button>
+           <a href="#book"><button class="home-button btn btn-dark rounded-pill m-5" type="submit">Book Space Now</button></a> 
         </section>
         
         <!--About US -->
@@ -82,7 +82,7 @@
                             </p>
                         </div>
                     </div>
-                    <button class="about-button btn btn-dark rounded-pill " type="submit">Book Space Now</button>
+                    <a href="#book"><button class="about-button btn btn-dark rounded-pill " type="submit">Book Space Now</button></a>
                 </div>
             </div>
         </section>
