--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
    
 
     <!--Team-->
-    <section class="team container-fluid pt-5 p-5">
+    {% comment %} <section class="team container-fluid pt-5 p-5">
         <div class="row text-center p-5">
             <div class="pro col-md-6 ">
                 <img class="p-2 w-50 rounded-circle " src="./assets/e.jpeg" alt="person1">
@@ -568,7 +568,7 @@
                 <img class="w-50 p-2 rounded-circle" src="./assets/v.jpg" alt="person1">
             </div>
         </div>
-    </section>
+    </section> {% endcomment %}
 
     <!--Footer Section-->
     <section class="footer">
@@ -625,9 +625,9 @@
                     &copy; Copyright <strong><span>Hustle Mania</span>
                     </strong>. All Rights Reserved
                 </div>
-                <div class="credits">Designed by
+                {% comment %} <div class="credits">Designed by
                     <a href="https://github.com/vantablanta">Happy Coders</a>
-                </div>
+                </div> {% endcomment %}
             </div>
         </footer>
     </section>
