--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
    
 
     <!--Team-->
-    {% comment %} <section class="team container-fluid pt-5 p-5">
+    <!-- <section class="team container-fluid pt-5 p-5">
         <div class="row text-center p-5">
             <div class="pro col-md-6 ">
                 <img class="p-2 w-50 rounded-circle " src="./assets/e.jpeg" alt="person1">
@@ -568,7 +568,7 @@
                 <img class="w-50 p-2 rounded-circle" src="./assets/v.jpg" alt="person1">
             </div>
         </div>
-    </section> {% endcomment %}
+    </section> -->
 
     <!--Footer Section-->
     <section class="footer">
