--- a/index.html
+++ b/index.html
@@ -625,9 +625,9 @@
                     &copy; Copyright <strong><span>Hustle Mania</span>
                     </strong>. All Rights Reserved
                 </div>
-                {% comment %} <div class="credits">Designed by
+                 <!-- <div class="credits">Designed by
                     <a href="https://github.com/vantablanta">Happy Coders</a>
-                </div> {% endcomment %}
+                </div> -->
             </div>
         </footer>
     </section>
