--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                         <img src="./assets/laptops/hp.jpg" class="img-fluid">
                     </div>
                     <div class="product-detail-container">
-                        <div class="mt-3"> <button class="btn  btn-primary btn-block product-btn">Book Now</button> </div>
+                        <div class="mt-3"> <button class="btn  btn-primary btn-block product-btn">Book it Now</button> </div>
                     </div>
                 </div>
             </div>
@@ -599,7 +599,7 @@
                         <div class="col-lg-3 col-md-6 footer-contact" id="contact">
                             <h4>Contact Us</h4>
                             <p>Biashara St<br>Nairobi<br>Kenya<br><br>
-                                <strong>Phone:</strong> +254 796 693 270<br>
+                                <strong>Phone:</strong> +254 788339882<br>
                                 <strong>Email:</strong> info@hustlemania.com<br>
                             </p>
                         </div>
